[package]
name = "hello-world-rust"
version = "0.1.0"
authors = ["AlvinHon"]
edition = "2021"
description = "Hello World!"
license = "MIT"
repository = "https://github.com/AlvinHon/hello_world_rs"
exclude = [
    ".github/*",
]

[lib]
name = "hello_world"
path = "src/lib.rs"

[[bin]]
name = "hello-world-rust"

[dependencies]
