[package]
name = "hello-world-in-rust-derive"
version = "0.1.0"
authors = ["AlvinHon"]
edition = "2021"
description = "Hello World!"
license = "MIT"
repository = "https://github.com/AlvinHon/hello_world_rs"

[lib]
proc-macro = true

[dependencies]
hello-world-in-rust = "0.1.0"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }