[package]
name = "hello-world-in-rust"
version = "0.1.1"
authors = ["AlvinHon"]
edition = "2021"
description = "Hello World!"
license = "MIT"
repository = "https://github.com/AlvinHon/hello_world_rs"

[lib]
name = "hello_world"
path = "src/lib.rs"

[[bin]]
name = "hello-world-in-rust"

[dependencies]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "hello_world"
harness = false

